# axoas

./: Cargo.toml  compose.dev.yaml
.devcontainer/: devcontainer.json
axoas-macros/: Cargo.toml
axoas-macros/src/: lib.rs
examples/auth_example/: Cargo.toml
examples/auth_example/src/: main.rs
examples/todo_api/: Cargo.toml
examples/todo_api/src/: main.rs
src/: context.rs  extract.rs  handler.rs  lib.rs  method.rs  openapi.rs  router.rs  routing.rs
tests/: integration.rs  openapi_tests.rs
