[package]
name = "axoas"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["json", "query", "form", "tokio", "http1"] }
openapi3-rs = { git = "https://github.com/strawberyy-coconut/openapi3-rs.git" }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = "2"
tokio = { version = "1", features = ["full"] }
fxhash = "0.2"
tower = "0.5"
tower-layer = "0.3"
tower-service = "0.3"
http = "1"
axoas-macros = { path = "./axoas-macros" }

# Optional: multipart support
axum-typed-multipart = { version = "0.16", optional = true, package = "axum_typed_multipart" }

[features]
default = []
multipart = ["dep:axum-typed-multipart"]
swagger = []
redoc = []
scalar = []

[workspace]
members = ["axoas-macros", "examples/*"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pretty_assertions = "1"
trybuild = { version = "1", features = ["diff"] }
