[package]
name = "auth-example"
version = "0.1.0"
edition = "2024"

[dependencies]
axoas = { path = "../.." }
axum = "0.8"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
openapi3-rs = { git = "https://github.com/strawberyy-coconut/openapi3-rs.git" }
indexmap = "2"
